--- a/themes/meme/i18n/pt-br.toml
+++ b/themes/meme/i18n/pt-br.toml
@@ -64,7 +64,7 @@ other = "Encontrados {{ .Count }} resultados para “{{ .Term }}”"
 other = "Não foram encontrados resultados para “{{ .Term }}”"
 
 
-# Redes Sociais
+# Socials
 
 [twitter]
 other = "Twitter"
@@ -94,8 +94,32 @@ other = "Qzone"
 other = "QR Code"
 
 
-# Meses
-# Utilizado em `i18nMonth`
+# Share on Fediverse page
+
+[javascriptRequired]
+other = "Esta funcionalidade requer que o JavaScript esteja ativado!"
+
+[fedishareTitleLabel]
+other = "Título da postagem"
+
+[fedishareDescriptionLabel]
+other = "Descrição (pode ser alterada na próxima etapa)"
+
+[fedishareUrlLabel]
+other = "Link"
+
+[fedishareInstanceLabel]
+other = "Instância Fediverse"
+
+[fedishareRememberInstance]
+other = "Lembrar instância neste dispositivo"
+
+[fedishareSubmitLabel]
+other = "Continuar para a instância"
+
+
+# Months
+# Used for `i18nMonth`
 
 [january]
 other = "Janeiro"
@@ -134,8 +158,8 @@ other = "Novembro"
 other = "Dezembro"
 
 
-# Números
-# Utilizado em `i18nYear`
+# Numbers
+# Used for `i18nYear`
 
 [0]
 other = "0"
