--- a/themes/meme/i18n/zh.toml
+++ b/themes/meme/i18n/zh.toml
@@ -64,6 +64,8 @@ other = "找到 {{ .Count }} 条关于「{{ .Term }}」的结果"
 other = "没有找到关于「{{ .Term }}」的结果"
 
 
+# Socials
+
 [twitter]
 other = "「Twitter」"
 
@@ -91,6 +93,33 @@ other = "「QQ 空间」"
 [qrcode]
 other = "「二维码」"
 
+
+# Share on Fediverse page
+
+[javascriptRequired]
+other = "此功能需要启用 JavaScript！"
+
+[fedishareTitleLabel]
+other = "帖子标题"
+
+[fedishareDescriptionLabel]
+other = "描述（可以在下一步中更改）"
+
+[fedishareUrlLabel]
+other = "链接"
+
+[fedishareInstanceLabel]
+other = "Fediverse 实例"
+
+[fedishareRememberInstance]
+other = "在此设备上记住该实例"
+
+[fedishareSubmitLabel]
+other = "前往实例"
+
+
+# Months
+# Used for `i18nMonth`
 
 [january]
 other = "一月"
@@ -128,6 +157,9 @@ other = "十一月"
 [december]
 other = "十二月"
 
+
+# Numbers
+# Used for `i18nYear`
 
 [0]
 other = "〇"
