Updated MemE theme to current state (revision eb1b7b0)

--- a/themes/meme/i18n/es.toml
+++ b/themes/meme/i18n/es.toml
@@ -90,8 +90,14 @@ other = "QQ"
 [qzone]
 other = "Qzone"
 
+[pocket]
+other = "Pocket"
+
 [qrcode]
 other = "Código QR"
+
+[email]
+other = "correo electrónico"
 
 
 # Share on Fediverse page
