--- a/themes/meme/i18n/ms.toml
+++ b/themes/meme/i18n/ms.toml
@@ -90,8 +90,14 @@ other = "QQ"
 [qzone]
 other = "Qzone"
 
+[pocket]
+other = "Pocket"
+
 [qrcode]
 other = "QR Code"
+
+[email]
+other = "emel"
 
 
 # Share on Fediverse page
